--- a/layouts/shortcodes/welcome.html
+++ b/layouts/shortcodes/welcome.html
@@ -1,4 +1,9 @@
-<div style="width: 120%; margin-left: -10%;">
+<div style="width: 55%;">
+    <h4 style="position: relative; display: inline-block; margin-top: 0;">
+        <span style="position: relative; z-index: 1;">欠驱动机器人实验室（URL）</span>
+        <span style="position: absolute; top: 0; left: 0; right: -1%; border-top: 2px solid #060606; z-index: 0;"></span>
+    </h4>
+    <p style="font-size: 1rem;">
     本实验室<b>非常注重理论研究与实际应用结合</b>，致力于<b>陆地/船用吊车、欠驱动机器人等机电系统</b>的自动控制研究，
     旨在提升它们的自动化、智能化、快速化、准确化程度，提高工作效率与安全性。本实验室研究团队入选了2017年度中国青少年
     科技创新奖励基金支持项目—大学生“小平科技创新团队”(全国仅50项)，实验室负责人<a href="/team/teacher/sunning/">孙宁</a>教授入选国家<b>四青</b>人才。
@@ -13,4 +18,5 @@
     第十一届中国青少年科技创新奖、“挑战杯”全国大学生课外学术科技作品竞赛一等奖、中国自动化学会（CAA）优秀硕士论文学位奖
     等重要奖项。基于此，<a href="/team/teacher/sunning/">孙宁</a>教授荣获<b>国家教学成果二等奖、天津市教学成果特等奖/
     一等奖</b>等，并荣获宝钢优秀教师奖。
+</p>
 </div>
