--- a/layouts/shortcodes/news-carousel.html
+++ b/layouts/shortcodes/news-carousel.html
@@ -1,5 +1,9 @@
 <div class="carousel-container">
-    <h3 style="margin-top: 0px;">最近新闻</h3>
+    <h4 style="position: relative; display: inline-block; margin-top: 0;">
+        <span style="position: relative; z-index: 1;">最近新闻</span>
+        <span style="position: absolute; top: 0; left: 0; right: -10%; border-top: 2px solid #060606; z-index: 0;"></span>
+    </h4>
+      
     <div class="carousel">
         {{ $posts := where .Site.RegularPages "Section" "post" }}
         {{ range $index, $item := first 4 (sort $posts "Date" "desc") }}
@@ -16,11 +20,10 @@
             </a>
         </div>
         {{ end }}
-        <!-- <div class="button-container">
-            <button class="carousel-button prev" onclick="moveSlide(-1)">❮</button>
-            <button class="carousel-button next" onclick="moveSlide(1)">❯</button>
-        </div> -->
+        
     </div>
+    <button class="carousel-button prev" onclick="moveSlide(-1)">❮</button>
+    <button class="carousel-button next" onclick="moveSlide(1)">❯</button>
     <div class="carousel-dots">
         {{ $posts := where .Site.RegularPages "Section" "post" }}
         {{ range $index, $item := first 4 $posts }}
@@ -31,22 +34,22 @@
 
 <style>
     .carousel-container {
-        width: 120%;
+        width: 45%;
         position: relative;
         margin: 0 auto;
         overflow: hidden;
-        left: 50%;
-        transform: translateX(-50%);  
+        /* left: 50%;
+        transform: translateX(-50%);   */
     }
 
     .carousel {
         display: flex;
         transition: transform 0.5s ease;
-        will-change: transform;
+        /* will-change: transform; */
     }
 
     .carousel-item {
-        min-width: 100%;
+        width: 100%;
         flex-shrink: 0;
         position: relative;
         overflow: hidden;
@@ -97,24 +100,17 @@
         color: white;
     }
 
-    .button-container {
-        position: absolute;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        z-index: 3;
-    }
-
     .carousel-button {
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
         background: rgba(0, 0, 0, 0.5);
         color: white;
-        padding: 16px;
+        padding: 12px;
         border: none;
+        border-radius: 5%;
         cursor: pointer;
-        font-size: 18px;
+        font-size: 16px;
         transition: background 0.3s;
         z-index: 2;
     }
@@ -134,7 +130,7 @@
 
     .carousel-dots {
         position: absolute;
-        bottom: 1%;
+        bottom: 5%;
         right: 3%;
         text-align: center;
         padding: 10px 0;
