主页修改，联系我们敲定

--- a/layouts/shortcodes/contact-us.html
+++ b/layouts/shortcodes/contact-us.html
@@ -1,6 +1,6 @@
 <div style="width: 75vw; margin: 0 auto; position: relative; left: 50%; transform: translateX(-50%); ">
     <div class="zhaosheng">
-        <h2>招生须知</h2>
+        <h2>招生招聘/h2>
         <p>
             <a href="">南开大学欠驱动系统实验室</a>招收优秀的本科生、硕士生、博士生、博士后。欢迎对我们研究工作感兴趣的同学加入我们实验室。感兴趣的同学，请发信至<a
                 href="sunn@nankai.edu.cn">sunn@nankai.edu.cn</a>，附带1-2页简历介绍一下基本情况。关于保送读硕、读博，请参见南开大学人工智能学院<a
@@ -24,8 +24,8 @@
     <div class="map-table">
         <table class="bordered-table">
             <colgroup>
-                <col style="width: 40%">
-                <col style="width: 60%">
+                <col style="width: 50%">
+                <col style="width: 50%">
             </colgroup>
             <tr>
                 <th>天津南开大学人工智能学院117实验室</th>
@@ -39,7 +39,7 @@
                     <img src="./images/lab2/line1.jpg" alt="">
                 </td>
             </tr>
-            <tr>
+            <!-- <tr>
                 <td>
                     <img src="./images/lab1/line2.jpg" alt="">
                 </td>
@@ -49,20 +49,17 @@
                         <img src="./images/lab2/line2-2.jpg" alt="">
                     </div>
                 </td>
-            </tr>
+            </tr> -->
             <tr>
                 <td>
                     <iframe width="425" height="350"
                         src="https://www.openstreetmap.org/export/embed.html?bbox=117.32445716857912%2C38.9791948016909%2C117.35363960266115%2C38.99687407827485&amp;layer=mapnik&amp;marker=38.98803499193336%2C117.33904838562012"
-                        style="border: 1px solid black"></iframe><br /><small><a
-                            href="https://www.openstreetmap.org/?mlat=38.98803&amp;mlon=117.33905#map=15/38.98803/117.33905&amp;layers=N">天津南开大学人工智能学院</a></small>
+                        style="border: 1px solid black;"></iframe>
                 </td>
                 <td>
                     <iframe width="425" height="350"
-                        src="https://www.openstreetmap.org/export/embed.html?bbox=114.23951983451843%2C22.56187624360368%2C114.24681544303895%2C22.56712723113294&amp;layer=mapnik&amp;marker=22.564501762364575%2C114.24316763877869"
-                        style="border: 1px solid black"></iframe><br /><small><a
-                            href="https://www.openstreetmap.org/?mlat=22.564502&amp;mlon=114.243168#map=17/22.564502/114.243168&amp;layers=N">深圳南开大学深圳研究院</a></small>
-
+                        src="https://www.openstreetmap.org/export/embed.html?bbox=114.22612220048907%2C22.554878949829156%2C114.22794610261919%2C22.556191782061145&amp;layer=mapnik&amp;marker=22.555535367506934%2C114.22703415155411"
+                        style="border: 1px solid black"></iframe>
                 </td>
             </tr>
         </table>
@@ -79,6 +76,7 @@
         /* background-color: #f0f0f0; */
         border-collapse: collapse;
         width: 100%;
+        text-align: center;
     }
 
     .bordered-table th,
