响应式布局

--- a/layouts/shortcodes/news-carousel.html
+++ b/layouts/shortcodes/news-carousel.html
@@ -162,6 +162,16 @@
             opacity: 1
         }
     }
+
+    @media (max-width:800px){
+        .carousel-container{
+            width: 100%;
+        }
+
+        .carousel-dots{
+            bottom: 2%;
+        }
+    }
 </style>
 
 <script>
