--- a/layouts/shortcodes/welcome.html
+++ b/layouts/shortcodes/welcome.html
@@ -1,4 +1,4 @@
-<div style="width: 55%;">
+<div class="welcome-container">
     <h4 style="margin-top: -10px;">欠驱动机器人实验室（URL）</h4>
     <p style="font-size: 1rem; text-indent: 2em; text-align: justify;">
         本实验室<b>非常注重理论研究与实际应用结合</b>，致力于<b>陆地/船用吊车、欠驱动机器人等机电系统</b>的自动控制研究，
@@ -17,3 +17,16 @@
             一等奖</b>等，并荣获宝钢优秀教师奖。
     </p>
 </div>
+
+<style>
+    .welcome-container{
+        width: 55%;
+    }
+
+    @media (max-width: 800px){
+        .welcome-container{
+            width: 100%;
+        }
+
+    }
+</style>
