--- a/layouts/shortcodes/contact-us.html
+++ b/layouts/shortcodes/contact-us.html
@@ -13,7 +13,7 @@
         <br />
         <b>邮箱</b>：<a href="sunn@nankai.edu.cn">sunn@nankai.edu.cn</a> (孙宁)
         <br />
-        <b>地址1</b>：南开大学津南校区人工智能学院117室
+        <b>地址1</b>：南开大学津南校区人工智能学院117
         <br />
         天津市海河教育园区同砚路38号，<span>邮编：300350</span>
         <br />
