响应式布局

--- a/layouts/shortcodes/home-page.html
+++ b/layouts/shortcodes/home-page.html
@@ -86,7 +86,8 @@
     }
 
     .pagination .page-button {
-        padding: 5px 10px;  /* 较小的内边距 */
+        padding: 5px 10px;
+        /* 较小的内边距 */
         cursor: pointer;
         font-weight: bold;
         font-size: 1rem;
@@ -95,12 +96,14 @@
     }
 
     .pagination .page-button:hover {
-        color: #4CAF50;  /* 鼠标悬停时改变颜色 */
+        color: #4CAF50;
+        /* 鼠标悬停时改变颜色 */
         transform: scale(1.1);
     }
 
     .pagination .page-button.active {
-        color: #4CAF50;  /* 当前页高亮 */
+        color: #4CAF50;
+        /* 当前页高亮 */
     }
 
     .pagination .ellipsis {
@@ -118,6 +121,24 @@
             width: 80vw;
             flex-direction: column;
             align-items: center;
+        }
+
+        .research-list {
+            width: 100%;
+            /* background-color: #f0f0f0; */
+        }
+
+        .research-card h4 {
+            font-size: 1rem !important;
+        }
+
+        .research-card p {
+            font-size: 0.8rem !important;
+        }
+
+        .award-news {
+            width: 100%;
+            /* background-color: aliceblue; */
         }
 
     }
