--- a/layouts/shortcodes/news-carousel.html
+++ b/layouts/shortcodes/news-carousel.html
@@ -173,6 +173,27 @@
             bottom: 2%;
         }
     }
+
+    @media (max-width:600px){
+        .carousel-image-container {
+        width: 100%;
+        height: 200px;
+        overflow: hidden; /* 隐藏图片放大后的溢出部分 */
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .carousel-image-container img {
+        width: 100%;
+        height: 200px;
+        margin: 0;
+        object-fit: contain;
+        transition: transform 0.3s ease; /* 平滑放大动画 */
+        display: block;
+    }
+    }
 </style>
 
 <script>
