--- a/layouts/shortcodes/research-news.html
+++ b/layouts/shortcodes/research-news.html
@@ -8,12 +8,12 @@
     </div>
 
     <!-- 分页按钮 -->
-    <div class="pagination">
+    <!-- <div class="pagination">
         <button id="prevBtn" onclick="changePage(-1)">上一页</button>
         <div id="pageButtons"></div>
         <button id="nextBtn" onclick="changePage(1)">下一页</button>
         <span id="pageNumber">第 1 页</span>
-    </div>
+    </div> -->
 </div>
 
 <style>
@@ -90,7 +90,7 @@
 </style>
 
 <!-- 自定义分页脚本 -->
-<script>
+<!-- <script>
     const itemsPerPage = 10;  // 每页显示的条目数
     let currentPage = 1;
     const items = document.querySelectorAll('.award-item');
@@ -178,4 +178,4 @@
 
     // 初始化时显示第一页
     showPage(currentPage);
-</script>
+</script> -->
