教师子页面调整

--- a/layouts/student/single.html
+++ b/layouts/student/single.html
@@ -42,6 +42,7 @@
         .student-info {
             font-family: "Noto Sans CJK", "Microsoft YaHei", "Arial", sans-serif;
             padding-top: 5%;
+            padding-bottom: 50px;
             margin-right: 10px;
             width: calc(100% - 150px);
         }
@@ -64,8 +65,8 @@
             color: #6d6d6d;
             font-size: 1.1rem;
         }
-        
-        .student-detail-box ul{
+
+        .student-detail-box ul {
             font-size: 1.1rem;
             color: #555555;
         }
@@ -85,34 +86,34 @@
             <div class="student-info">
                 <h1 style=" cursor: pointer; padding-bottom: 0.8rem; margin: 0;"><a href="{{ .Permalink }}"
                         style="cursor: pointer;">{{ .Title }}</a></h4>
-                    <p style="color: rgb(25, 73, 163);">{{ .Params.position }}</p>
-                    <p><span style="color: #711a5f;">电子邮箱：</span> {{.Params.contact}}</p>
-                    <p><span style="color: #711a5f;">研究方向：</span> {{ .Params.description}}</p>
-                    <ul>
-                        
+                <p style="color: rgb(25, 73, 163);">{{ .Params.position }}</p>
+                <p><span style="color: #711a5f;">电子邮箱：</span> {{.Params.contact}}</p>
+                <p><span style="color: #711a5f;">研究方向：</span> {{ .Params.description}}</p>
+                    <!-- <ul>
                         {{ range .Params.item }}
                         <li>{{ . }}</li>
                         {{ end }}
-                    </ul>
+                    </ul> -->
             </div>
         </div>
         <div class="student-detail-box">
-            {{ if .Params.papers }}
-            <h2 style="color: #711a5f;">论文发表</h4>
-            <ul class="student-paper-list">
-                {{ range .Params.papers }}
-                <li>{{ . }}</li>
-                {{ end }}
-            </ul>
-            {{ end }}
             {{ if .Params.item }}
-            <h2 style="color: #711a5f;">所获奖励</h4>
+            <h4 style="color: #711a5f; font-size: 1.1rem;">所获奖励</h4>
             <ul>
                 {{ range .Params.item }}
                 <li>{{ . }}</li>
                 {{ end }}
             </ul>
             {{ end }}
+            {{ if .Params.papers }}
+            <h4 style="color: #711a5f;">论文发表</h4>
+            <ul class="student-paper-list">
+                {{ range .Params.papers }}
+                <li>{{ . }}</li>
+                {{ end }}
+            </ul>
+            {{ end }}
+
         </div>
     </div>
 
